--- a/.github/workflows/usgs_tests.yaml
+++ b/.github/workflows/usgs_tests.yaml
@@ -25,7 +25,8 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-
+      - name: Install Python dependencies
+        run: python -m pip install --upgrade pip pandas
       # Runs a single command using the runners shell
       - name: Python unittests
         run: python tests/*.py
