--- a/.github/workflows/scripts.yaml
+++ b/.github/workflows/scripts.yaml
@@ -27,5 +27,5 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Python unittests
+      - name: Python Scripts
         run: python scripts/*.py
